--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ant-design-vue": "1.7.7",
     "chart.js": "3.5.1",
     "core-js": "^3.22.4",
+    "echarts": "^5.3.2",
     "quill": "1.3.7",
     "vue": "2.6.14",
     "vue-pswipe": "0.15.3",
