--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fullcalendar/interaction": "5.9.0",
     "@fullcalendar/vue": "5.9.0",
     "ant-design-vue": "1.7.7",
+    "axios": "^0.27.2",
     "chart.js": "3.5.1",
     "core-js": "^3.22.4",
     "echarts": "^5.3.2",
     "quill": "1.3.7",
     "vue": "2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-pswipe": "0.15.3",
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.5.2",
