--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.3.2",
     "quill": "1.3.7",
     "vue": "2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-pswipe": "0.15.3",
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.5.2",
