--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "3.5.1",
     "core-js": "^3.22.4",
     "echarts": "^5.3.2",
+    "element-ui": "^2.15.8",
     "quill": "1.3.7",
     "vue": "2.6.14",
     "vue-axios": "^3.4.1",
