--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@fullcalendar/core": "5.9.0",
     "@fullcalendar/daygrid": "5.9.0",
     "@fullcalendar/interaction": "5.9.0",
     "@fullcalendar/vue": "5.9.0",
+    "@jiaminghi/data-view": "^2.10.0",
     "ant-design-vue": "1.7.7",
     "axios": "^0.27.2",
     "chart.js": "3.5.1",
     "core-js": "^3.22.4",
     "echarts": "^5.3.2",
-    "element-plus": "^2.2.0",
     "element-ui": "^2.15.8",
     "quill": "1.3.7",
     "vue": "2.6.14",
