--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fullcalendar/daygrid": "5.9.0",
     "@fullcalendar/interaction": "5.9.0",
     "@fullcalendar/vue": "5.9.0",
+    "@growthbunker/vuedarkmode": "^0.5.56",
     "@jiaminghi/data-view": "^2.10.0",
     "ant-design-vue": "1.7.7",
     "axios": "^0.27.2",
     "chart.js": "3.5.1",
     "core-js": "^3.22.4",
+    "darkmode-js": "^1.5.7",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.8",
     "quill": "1.3.7",
