--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.22.4",
     "darkmode-js": "^1.5.7",
     "echarts": "^5.3.2",
+    "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.8",
     "quill": "1.3.7",
     "vue": "2.6.14",
