--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.8",
     "quill": "1.3.7",
+    "reqwest": "^2.0.5",
     "vue": "2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-pswipe": "0.15.3",
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.5.2",
