--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.8",
-    "neovis.js": "^1.6.0",
+    "neovis.js": "1.6.0",
     "quill": "1.3.7",
     "reqwest": "^2.0.5",
     "vue": "2.6.14",
