--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vue/cli-service": "4.5.13",
     "node-sass": "4.14.1",
     "sass-loader": "10.1.1",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "2.6.14"
   }
 }
