--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "2.6.14",
     "vue-axios": "^3.4.1",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-particles": "^1.0.9",
     "vue-pswipe": "0.15.3",
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.5.2",
