--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/interaction": "5.9.0",
     "@fullcalendar/vue": "5.9.0",
     "@growthbunker/vuedarkmode": "^0.5.56",
+    "@growthbunker/vuetimeline": "^0.1.17",
     "@jiaminghi/data-view": "^2.10.0",
     "ant-design-vue": "1.7.7",
     "axios": "^0.27.2",
@@ -27,7 +28,7 @@
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.8",
-    "neovis.js": "1.6.0",
+    "neovis.js": "^1.6.0",
     "quill": "1.3.7",
     "reqwest": "^2.0.5",
     "vue": "2.6.14",
